fixed navbar disappearing on mobile

--- a/src/Home.css
+++ b/src/Home.css
@@ -109,6 +109,22 @@ button {
 }
 
 @media only screen and (max-width: 850px) {
+  .home-wrapper {
+    text-align: center;
+    position: absolute;
+    top: 15%;
+    left: 0%;
+    /* transform: translate(-50%, -50%); */
+    padding: 5% 3%;
+    height: 90vh;
+    width: 90vw;
+    transition: all 0.8s ease-in-out;
+    background-color: rgb(72, 200, 240, 0.4);
+    border-style: solid;
+    border-color: white;
+    border-radius: 3px;
+  }
+
   .logo {
     height: 20vh;
     float: none;
@@ -129,9 +145,9 @@ button {
     display: block;
     color: #03161eff;
     text-align: left;
-    font-size: 22.5px;
-
-    padding: 20px;
+    font-size: 15px;
+    margin-top: 75px;
+    padding: 10px;
 
     text-decoration: none;
   }
@@ -140,7 +156,7 @@ button {
     background-color: #03161eff;
     border-style: solid;
     color: white;
-    box-shadow: 5px 10px;
+    box-shadow: 2px 5px;
   }
 
   .home-blurb {
