--- a/src/Layout.css
+++ b/src/Layout.css
@@ -74,7 +74,13 @@ li a:hover {
 }
 
 @media only screen and (max-width: 480px) {
-  .navbar-list {
-    display: none;
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    font-size: 15px;
+
+    padding: 8px;
+    text-decoration: none;
   }
 }
